--- a/vlog.css
+++ b/vlog.css
@@ -1,11 +1,13 @@
-
-
-
-
 html {
-height: 300px;
-width: 700px; 
-background-color: #28282B;
+  height: 300px;
+  width: 700px; 
+  background-color: #28282B;
+}
+
+body {
+  text-align: center;
+  border: 0.2px solid #282828;
+  Font: 16px "Open-Sans", sans-serif;
 }
 
 .main-menu {
@@ -18,16 +20,19 @@ background-color: #28282B;
   flex-direction: column; 
   margin-left:-8px;
   margin-top: -8px;
-
 }
 
-.headline {
+.main-menu-top{
+  justify-content: space-between;
+}
+
+.main-menu__headline {
   text-align: center;
   color: white;
   margin-top: -40px;
 }
 
-.small_headline {
+.main-menu__headline-small {
   text-align: center;
   color: grey;
   opacity: 0.7;
@@ -35,7 +40,6 @@ background-color: #28282B;
   margin-top: -20px;
   padding: 20px;
 }
-
 
 .vertical-menu {
   display: flex;
@@ -57,16 +61,13 @@ a{
   color: #909096;
 }
 
-.About{
-  text-align: center;
-  border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
+.main-menu__about{
   width: 140px;
   padding: 15px;
   margin: -20px
 }
 
-.My_Skills{
+.main-menu__my-skills{
   text-align: center;
   border: 0.2px solid #282828;
   Font: 16px "Open-Sans", sans-serif;
@@ -77,8 +78,7 @@ a{
 
 }
 
-
-.Work{
+.main-menu__work{
   text-align: center;
   border: 0.2px solid #282828;
   Font: 16px "Open-Sans", sans-serif;
@@ -87,8 +87,7 @@ a{
   margin: -20px;
 }
 
-
-.Contact{
+.main-menu__contact{
   text-align: center;
   border: 0.2px solid #282828;
   Font: 16px "Open-Sans", sans-serif;
@@ -98,9 +97,7 @@ a{
   margin-left: -20px;
 }
 
-
-
-.Blog{
+.main-menu__blog{
   text-align: center;
   border: 0.2px solid #282828;
   Font: 16px "Open-Sans", sans-serif;
@@ -109,52 +106,37 @@ a{
   margin: -20px;
 }
 
-
-
-.logo {
+.main-menu-top__logo {
   background-color: black;
 }
-
-
-
-
-
-
-
-
-
 
 .vertical-menu a:hover {
   color: #08fdd8; 
 }
 
-.social_media {
+.media {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
   margin-left: 50px;
-margin-right: 50px;
+  margin-right: 50px;
 }
 
-.main-menu_top{
-justify-content: space-between;
-}
-
-.linkedin {
+.main-menu__linkedin {
   width: 20px;
   height: 20px;
   opacity: 0.5;
   background: none;
 }
 
-.git {
+.main-menu__git {
   width: 20px;
   height: 20px;
   opacity: 0.5;
   background: none;
 }
 
-.big_logo{
+.main-menu__logo-big {
   width: 100px;
   height: 100px;
   margin: 30px;
