--- a/vlog.css
+++ b/vlog.css
@@ -9,6 +9,15 @@ body {
   height: 100%; 
   }
 
+  h3 {
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
+    text-indent: 0;
+    transition: all .5s ease-in-out; 
+  }
+
+    
 .main-menu {
   background-size: cover;
   background-color: #181818;
@@ -42,10 +51,13 @@ body {
   width: 160px;
   height: 25%;
  }
-a{
+
+ a {
   text-decoration: none;
   color: #909096;
 }
+
+
 
 .main-menu__about {
   border: 0.2px solid #282828;
@@ -103,7 +115,7 @@ a{
 
 .main-menu-top__logo {
   background-color: black;
-}
+  }
 
 .vertical-menu a:hover {
   color: #08fdd8; 
@@ -122,6 +134,16 @@ a{
   background: none;
 }
 
+.main-menu__J {
+  color: red;
+  text-shadow: -5px 0 #08fdd8;
+  font-size: 80px; 
+  font-weight: bold;
+  padding: 10px 30px 30px 65px;
+  float:left;
+  left: 60px;
+ }
+
 .main-menu__git {
   width: 20px;
   height: 20px;
@@ -129,17 +151,18 @@ a{
   background: none;
 }
 
+/*
 .main-menu__logo-big {
   width: 100px;
   height: 100px;
   margin: 30px;
 }
+*/
 
 img:hover{
   color: #08fdd8; 
   background-color: #08fdd8; 
 }
-
 
 .first-page {
   text-align: left;
@@ -154,12 +177,10 @@ img:hover{
 .first-page__header {
   color: white; 
   font-size: 60px; 
-  font-size: 60px;
   font-weight: bold;
   padding: 30px;
   margin: 80px;
   float:left;
- 
 }
 
 span {
@@ -175,146 +196,603 @@ span:hover {
 .first-page__J {
   color: red;
   text-shadow: -5px 0 #08fdd8;
- 
-}
+ }
 
   .first-page__text {
-    color: darkgrey;
-    font-size: 20px;
-    font-style:normal;
-    font-family: 'Times New Roman', Times, serif;
-    align-items: flex-start;
-    display: flex; 
-    vertical-align: middle;
-    position: absolute; 
-    top: 350px;
-    left: 110px; 
+  color: darkgrey;
+  font-size: 20px;
+  font-style:normal;
+  font-family: 'Times New Roman', Times, serif;
+  align-items: flex-start;
+  display: flex; 
+  vertical-align: middle;
+  position: absolute; 
+  top: 350px;
+  left: 110px; 
   }
 
   .first-page__button { 
-    transition: all .5s ease-in-out; 
-    background-color: #282828;
-    color: #08fdd8;
-    border: 0.5px solid #08fdd8;
-    position: absolute;
-    left: 210px;
-    top: 640px;
-    padding: 15px 60px 15px 60px
-  }
-
-  .first-page__button:hover{
-    background-color: #08fdd8;
-    color: black;
-  }
-
-   .first-page__run_text {
-    position: absolute;
-    top: 88%;
-    left: 180px; 
-    writing-mode: vertical-rl;
-    color: white;
-      }
-
-  .first-page__run_text1 {
-    position: absolute; 
-    top: 88%;
-    left: 97%; 
-    writing-mode: vertical-rl;
-    color: white; 
-  }
-
-    .second-page-box {
-    background-color: #282828;
-    height: 300px;
-    border: 0px solid #08fdd8;
-    margin-left: 160px;
-    bottom: 300px;
-    margin-top: 800px;
-  }
-
-  .second-page__header {
-    color: #08fdd8; 
-    font-size: 40px; 
-    font-weight: bold;
-    padding: 30px;
-    float:left;
-    padding-left: 60px;
-  }
-
-.second-page__text {
-  color: white; 
-  font-size: 15px; 
-  padding: 110px;
-  padding-left: 70px;
-}
-
-.second-page__button { 
   transition: all .5s ease-in-out; 
   background-color: #282828;
   color: #08fdd8;
   border: 0.5px solid #08fdd8;
-  padding: 15px 60px 15px 60px;
   position: absolute;
-  left: 80%;
+  left: 210px;
+  top: 640px;
+  padding: 15px 60px 15px 60px
+  }
+
+  .first-page__button:hover{
+  background-color: #08fdd8;
+  color: black;
+  }
+
+   .first-page__run_text {
+  position: absolute;
+  top: 85%;
+  left: 140px; 
+  writing-mode: vertical-rl;
+  color: white;
+      }
+
+  .first-page__run_text1 {
+  position: absolute; 
+  top: 85%;
+  left: 94%; 
+  writing-mode: vertical-rl;
+  color: white; 
+  }
+
+    .second-page-box {
+  background-color: #282828;
+  height: 300px;
+  border: 0px solid #08fdd8;
+  margin-left: 160px;
+  bottom: 300px;
+  margin-top: 800px;
+  }
+
+  .second-page__header, .sixth-page__header {
+  color: #08fdd8; 
+  font-size: 40px; 
+  font-weight: bold;
+  padding: 30px;
+  float:left;
+  padding-left: 60px;
+  }
+
+.second-page__text {
+ color: white; 
+ font-size: 15px; 
+ padding: 120px;
+ padding-left: 70px;
+}
+
+.second-page__button { 
+ transition: all .5s ease-in-out; 
+ background-color: #282828;
+ color: #08fdd8;
+ border: 0.5px solid #08fdd8;
+ padding: 15px 60px 15px 60px;
+ position: absolute;
+ left: 80%;
 }
 
 .second-page__button:hover{
-  background-color: #08fdd8;
-  color: black;
+ background-color: #08fdd8;
+ color: black;
 }
 
 .third-page-box {
-  background-color: #282828;
+ background-color: #282828;
+ height: 250px;
+ border: 0px solid #08fdd8;
+ margin-left: 160px;
+ bottom: 100px;
+ border: 0.5px solid #08fdd8;
+ display:flex;
+ flex-direction: column;
+}
+
+.third-page__pic1 {
+  height: 250px;
+  width: 315px;
+  transition: transform .2s; 
+
+}
+
+.third-page__pic1:hover{
+  transform: scale(1.1); 
+}
+
+.third-page__pic2 {
+  height: 250px;
+  width: 315px;
+  transition: transform .2s; 
+  position: absolute;
+  left: 485px;
+  top: 1129px;
+}
+.third-page__pic2:hover {
+  transform: scale(1.1);
+}
+
+.third-page__pic3{
+  height: 250px;
+  width: 315px;
+  transition: transform .2s; 
+  position: absolute;
+  left: 800px;
+  top: 1129px;
+}
+.third-page__pic3:hover {
+  transform: scale(1.1);
+}
+
+.third-page__pic4{
+  height: 250px;
+  width: 315px;
+  transition: transform .2s; 
+  position: absolute;
+  left: 1115px;
+  top: 1129px;
+}
+.third-page__pic4:hover {
+  transform: scale(1.1);
+}
+
+
+
+/* Next some media functions used for bigger screens resolution*/
+
+@media only screen 
+and (min-width:2000px)
+and (max-width:3000px) {
+
+  .third-page-box {
+    height: 500px;
+  }
+  .third-page__pic1 {
+    width: 600px;
+    height: 500px;
+  }
+  .third-page__pic2 {
+    width: 600px;
+    height: 500px;
+    left: 750px;
+  }
+  .third-page__pic3 {
+    width: 600px;
+    height: 500px;
+    left: 1350px;
+}
+.third-page__pic4 {
+  width: 600px;
   height: 500px;
+  left: 1950px;
+}
+.first-page__run_text {
+  top: 1000px;
+}
+.first-page__run_text1 {
+  top: 1000px;
+}
+
+}
+
+
+
+
+.fourth-page-box {
+  background-color: #282828;
+  height: 400px;
+  border: 0px solid #08fdd8;
+  margin-left: 160px;
+  margin-top: 30px;
+  }
+
+  .fourth-page__header {
+  color: #08fdd8; 
+  font-size: 40px; 
+  font-weight: bold;
+  padding: 30px;
+  float:left;
+  padding-left: 60px;
+  }
+
+  .fourth-page__text {
+    color: white; 
+    font-size: 15px; 
+    padding: 120px;
+    padding-left: 70px;
+     }
+
+   .links {
+     color:#08fdd8;
+     transition: all .3s ease-in-out; 
+   }
+
+   .links:hover {
+     color: grey;
+   }
+
+   
+   .first-paga__arrow {
+     left: 300px;
+   }
+
+
+   .fifth-page-box {
+    background-color: #282828;
+    height: 600px;
+    border: 0px solid #08fdd8;
+    margin-left: 160px;
+    bottom: 100px;
+    margin-top: 100px;
+    font-family: sans-serif;
+    letter-spacing: .2rem;
+    font-size: 13px;
+    text-indent: 2em;
+    line-height: 3;
+    }
+
+    .fifth-page-box h3:hover {
+      color:#08fdd8;
+    }
+
+    .fifth-page__block1 {
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    left: 200px;
+    top: 2000px;
+    box-shadow: 1px 5px 10px 1px #181818;
+    border-top: #E4EF89;
+    border-top-style: solid;
+    color:#E4EF89;
+    }
+
+    .fifth-page__block1 h3 {
+      line-height: 2;
+      margin-left: 30px;
+      margin-right: 30px; 
+    }
+
+    .fifth-page__block1 p {
+      color: #A7A7A7;
+      line-height: 24px;
+      margin-left: 30px;
+      margin-right: 30px; 
+      letter-spacing: normal;
+      text-indent: 0;
+      font-size: 14px;
+    }
+
+    .fifth-page__block2 {
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    left: 600px;
+    top: 2000px;
+    box-shadow: 1px 5px 10px 1px #181818;
+    border-top: #81D8F6;
+    border-top-style: solid;
+    color:#81D8F6;
+    }
+
+    .fifth-page__block2 h3 {
+      line-height: 2;
+      margin-left: 30px;
+      margin-right: 30px; 
+    }
+
+    .fifth-page__block2 p {
+      color: #A7A7A7;
+      line-height: 24px;
+      margin-left: 30px;
+      margin-right: 30px; 
+      letter-spacing: normal;
+      text-indent: 0;
+      font-size: 14px;
+    }
+
+    .fifth-page__block3{
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    left: 1000px;
+    top: 2000px;
+    box-shadow: 1px 5px 10px 1px #181818;
+    border-top: #FC2154;
+    border-top-style: solid;
+    color:#FC2154;
+    }
+
+    .fifth-page__block3 h3 {
+      line-height: 2;
+      margin-left: 30px;
+      margin-right: 30px; 
+    }
+
+    .fifth-page__block3 p {
+      color: #A7A7A7;
+      line-height: 24px;
+      margin-left: 30px;
+      margin-right: 30px; 
+      letter-spacing: normal;
+      text-indent: 0;
+      font-size: 14px;
+    }
+
+    .fifth-page__block4 {
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    left: 200px;
+    top: 2300px;
+    box-shadow: 1px 5px 10px 1px #181818;
+    border-top: #FC2154;
+    border-top-style: solid;
+    color:#FC2154;
+    }
+
+    .fifth-page__block4 h3 {
+      line-height: 2;
+      margin-left: 30px;
+      margin-right: 30px; 
+    }
+
+    .fifth-page__block4 p {
+      color: #A7A7A7;
+      line-height: 24px;
+      margin-left: 30px;
+      margin-right: 30px; 
+      letter-spacing: normal;
+      text-indent: 0;
+      font-size: 14px;
+    }
+
+    .fifth-page__block5 {
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    left: 600px;
+    top: 2300px;
+    box-shadow: 1px 5px 10px 1px #181818;
+    border-top: #FEA500;
+    border-top-style: solid;
+    color:#FEA500;
+    }
+
+    .fifth-page__block5 h3 {
+      line-height: 2;
+      margin-left: 30px;
+      margin-right: 30px; 
+    }
+
+    .fifth-page__block5 p {
+      color: #A7A7A7;
+      line-height: 24px;
+      margin-left: 30px;
+      margin-right: 30px; 
+      letter-spacing: normal;
+      text-indent: 0;
+      font-size: 14px;
+    }
+
+
+    .fifth-page__block6 {
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    left: 1000px;
+    top: 2300px;
+    box-shadow: 1px 5px 10px 1px #181818;
+    border-top: #FEA500;
+    border-top-style: solid;
+    color:#FEA500;
+    }
+
+    .fifth-page__block6 h3 {
+      line-height: 2;
+      margin-left: 30px;
+      margin-right: 30px; 
+    }
+
+    .fifth-page__block6 p {
+      color: #A7A7A7;
+      line-height: 24px;
+      margin-left: 30px;
+      margin-right: 30px; 
+      letter-spacing: normal;
+      text-indent: 0;
+      font-size: 14px;
+    }
+
+    @media only screen 
+and (min-width:2000px)
+and (max-width:3000px) {
+
+
+  .fifth-page__block6 {
+    position: absolute;
+    height: 150px;
+    width: 650px;
+    left: 1800px;
+    padding-left: 50px;
+    text-indent: 0;
+    }
+
+    .fifth-page__block6, h3 {
+      display: table-row-group;
+      padding-left: 50px;
+    }
+
+    .fifth-page__block6 p {
+      display: table-row-group
+    }
+
+    .fifth-page__block5 {
+      position: absolute;
+      height: 150px;
+      width: 650px;
+      left: 1025px;
+      padding-left: 50px;
+      text-indent: 0;
+      }
+
+      .fifth-page__block5 h3 {
+        display: table-row-group;
+        padding-left: 50px;
+      }
+  
+      .fifth-page__block5 p {
+        display: table-row-group
+      }
+
+      .fifth-page__block4 {
+        position: absolute;
+        height: 150px;
+        width: 650px;
+        left: 250px;
+        padding-left: 50px;
+        text-indent: 0;
+        }
+  
+        .fifth-page__block4 h3 {
+          display: table-row-group;
+          padding-left: 50px;
+        }
+    
+        .fifth-page__block4 p {
+          display: table-row-group
+        }
+  
+.fifth-page__block3 {
+  position: absolute;
+      height: 150px;
+      width: 650px;
+      left: 1800px;
+      padding-left: 50px;
+      text-indent: 0;
+}
+
+.fifth-page__block3 h3 {
+  display: table-row-group;
+  padding-left: 50px;
+}
+
+.fifth-page__block3 p {
+  display: table-row-group
+}
+
+.fifth-page__block2 {
+  position: absolute;
+  height: 150px;
+  width: 650px;
+  left: 1025px;
+  padding-left: 50px;
+  text-indent: 0;
+}
+
+.fifth-page__block2 h3 {
+  display: table-row-group;
+  padding-left: 50px;
+}
+
+.fifth-page__block2 p {
+  display: table-row-group
+}
+
+.fifth-page__block1 {
+  position: absolute;
+  height: 150px;
+  width: 650px;
+  left: 250px;
+  padding-left: 50px;
+  text-indent: 0;
+}
+
+.fifth-page__block1 h3 {
+  display: table-row-group;
+  padding-left: 50px;
+}
+
+.fifth-page__block1 p {
+  display: table-row-group
+}
+
+    br{content:' ';}
+br:after{content:' ';}
+}
+
+
+
+
+.sixth-page {
+  background-color: #282828;
+  height: 600px;
   border: 0px solid #08fdd8;
   margin-left: 160px;
   bottom: 100px;
-  border: 0.5px solid #08fdd8;
-  display:flex;
+  margin-top: 100px;
+  font-family: sans-serif;
   }
 
- 
+  .sixth-page__text {
+    color: white; 
+    font-size: 15px;
+    text-indent: 0;
+    letter-spacing: normal;
+    line-height: normal;
+    padding-left: 30px;
+    margin-top: 30px;
+  }
 
+  .sixth-page__map {
+    height: 600px;
+    width: 550px; 
+  }
 
+.sixth-page__button { 
+  transition: all .5s ease-in-out; 
+  background-color: #282828;
+  color: #08fdd8;
+  border: 0.5px solid #08fdd8;
+  padding: 10px;
+  margin: 60px 90px 30px 10px;
+  position: absolute;
+  left: 15%;
+  height: 30px;
+  width: 150px;
+  font-size: 13px;
+  text-align: center;
+ }
 
+  .sixth-page__button:hover {
+    background-color: #08fdd8;
+    color: black;
+   }
 
+   .form__opacity{
+     background-color: black;
+     opacity: 70%;
+     padding: 20px; 
+     margin-left: 600px;
+     position: absolute;
+     width: 145px;
+     height: 130px;
+     font-size: 13px;
+     color: white;
+   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
+   @media only screen 
+and (min-width:2000px)
+and (max-width:3000px) {
+  .form__opacity{
+    margin-left: 1190px;
+  }
+  .sixth-page__button {
+    margin-left: 840px;
+  }
+}
