--- a/vlog.css
+++ b/vlog.css
@@ -1,6 +1,6 @@
 html {
-   background-color: #28282B;
-   height: 100%;
+  background-color: #28282B;
+  height: 100%;
 }
 
 body {
@@ -9,7 +9,7 @@ body {
   height: 100%; 
   }
 
-  h3 {
+h3 {
   color: white;
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
@@ -17,7 +17,6 @@ body {
   transition: all .5s ease-in-out; 
   }
 
-    
 .main-menu {
   background-size: cover;
   background-color: #181818;
@@ -47,21 +46,17 @@ body {
   text-decoration: none; 
   text-align: center;
   border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
   width: 160px;
   height: 25%;
  }
 
- a {
+a {
   text-decoration: none;
   color: #909096;
 }
 
-
-
 .main-menu__about {
   border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
   text-align: center;
   width: 100%;
   padding: 10px 0px 10px 0px;
@@ -72,7 +67,6 @@ body {
 .main-menu__my-skills{
   text-align: center;
   border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
   width: 100%;
   padding: 10px 0px 10px 0px;
   display: block;
@@ -83,7 +77,6 @@ body {
 .main-menu__work{
   text-align: center;
   border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
   width: 100%;
   padding: 10px 0px 10px 0px;
   display: block;
@@ -94,7 +87,6 @@ body {
 .main-menu__contact{
   text-align: center;
   border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
   width: 140px;
   width: 100%;
   padding: 10px 0px 10px 0px;
@@ -105,7 +97,6 @@ body {
 .main-menu__blog{
   text-align: center;
   border: 0.2px solid #282828;
-  Font: 16px "Open-Sans", sans-serif;
   width: 140px;
   width: 100%;
   padding: 10px 0px 10px 0px;
@@ -150,16 +141,13 @@ body {
   opacity: 0.5;
   background: none;
 }
-
-/*
-.main-menu__logo-big {
-  width: 100px;
-  height: 100px;
-  margin: 30px;
+/* Resolving problem with IMG (Changed img: hover to this 2 styles declaration */
+.main-menu__linkedin:hover {
+  color: #08fdd8; 
+  background-color: #08fdd8; 
 }
-*/
 
-img:hover{
+.main-menu__git:hover {
   color: #08fdd8; 
   background-color: #08fdd8; 
 }
@@ -183,11 +171,11 @@ img:hover{
   float:left;
 }
 
-span {
+.first-page__header span {
   transition: all .5s ease-in-out; 
 }
 
-span:hover {
+.first-page__header:hover span:hover {
   color:#08fdd8;
   font-weight: 50;
   font-size: larger;
@@ -243,7 +231,7 @@ span:hover {
   color: white; 
   }
 
-.second-page-box {
+.second-page {
   background-color: #282828;
   height: 300px;
   border: 0px solid #08fdd8;
@@ -259,6 +247,16 @@ span:hover {
   padding: 30px;
   float:left;
   padding-left: 60px;
+  }
+
+.second-page__header span {
+  transition: all .5s ease-in-out; 
+  }
+  
+.second-page__header:hover span:hover {
+  color:#08fdd8;
+  font-weight: 50;
+  font-size: larger;
   }
 
 .second-page__text {
@@ -283,7 +281,7 @@ span:hover {
   color: black;
 }
 
-.third-page-box {
+.third-page{
   background-color: #282828;
   height: 250px;
   border: 0px solid #08fdd8;
@@ -340,11 +338,7 @@ span:hover {
 .third-page__pic4:hover {
   transform: scale(1.1);
 }
-
-
-
 /* Next some media functions used for bigger screens resolution*/
-
 @media only screen 
 and (min-width:2000px)
 and (max-width:3000px) {
@@ -377,13 +371,9 @@ and (max-width:3000px) {
 .first-page__run_text1 {
   top: 1000px;
 }
-
 }
-
-
 /*fourth-page */
-
-.fourth-page-box {
+.fourth-page {
   background-color: #282828;
   height: 400px;
   border: 0px solid #08fdd8;
@@ -398,6 +388,16 @@ and (max-width:3000px) {
   padding: 30px;
   float:left;
   padding-left: 60px;
+  }
+
+.fourth-page__header span {
+  transition: all .5s ease-in-out; 
+  }
+  
+.fourth-page__header:hover span:hover {
+  color:#08fdd8;
+  font-weight: 50;
+  font-size: larger;
   }
 
 .fourth-page__text {
@@ -421,9 +421,8 @@ and (max-width:3000px) {
   left: 300px;
    }
 
-
-   /*fifth-page */
-.fifth-page-box {
+/*fifth-page */
+.fifth-page{
   background-color: #282828;
   height: 600px;
   border: 0px solid #08fdd8;
@@ -437,7 +436,7 @@ and (max-width:3000px) {
   line-height: 3;
     }
 
-.fifth-page-box h3:hover {
+.fifth-page h3:hover {
   color:#08fdd8;
     }
 
@@ -726,10 +725,7 @@ and (max-width:3000px) {
 br{content:' ';}
 br:after{content:' ';}
 }
-
-
 /* Sixth - page styling  */
-
 .sixth-page {
   background-color: #282828;
   height: 600px;
@@ -738,7 +734,17 @@ br:after{content:' ';}
   bottom: 100px;
   margin-top: 100px;
   font-family: sans-serif;
-  }
+}
+
+.sixth-page__header span {
+  transition: all .5s ease-in-out; 
+}
+
+.sixth-page__header:hover span:hover {
+  color:#08fdd8;
+  font-weight: 50;
+  font-size: larger;
+}
 
 .sixth-page__text {
   color: white; 
@@ -848,6 +854,15 @@ input:focus::placeholder {
   margin-top: 20%;
 }
 
+.fourth-page__header span {
+  transition: all .5s ease-in-out; 
+  }
+  
+.fourth-page__header:hover span:hover {
+  color:#08fdd8;
+  font-weight: 50;
+  font-size: larger;
+  }
 
 /* My Skills Page */
 
@@ -963,3 +978,31 @@ p, .Page_MySkills__Card1 {
   float: right;
   margin-top: 30px;
 }
+
+/*
+
+.img-wrapper {
+  display: inline-block;
+  overflow: hidden;
+  
+  border: 1px solid gray;
+}
+
+.img-wrapper img {
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  transition: all 0.5s ease;
+  
+  vertical-align: middle;
+}
+
+.img-wrapper img:hover {
+  -webkit-transform:scale(1.5); /* Safari and Chrome */
+  -moz-transform:scale(1.5); /* Firefox */
+  -ms-transform:scale(1.5); /* IE 9 */
+  -o-transform:scale(1.5); /* Opera */
+  transform:scale(1.5);
+}
+
