--- a/vlog.css
+++ b/vlog.css
@@ -979,30 +979,32 @@ p, .Page_MySkills__Card1 {
   margin-top: 30px;
 }
 
-/*
+.work-body {
+position: relative;
+display: inline-block;
+width: 100%;
+height: 100%;
+display: inline-block;
+position: relative;
+}
 
 .img-wrapper {
   display: inline-block;
   overflow: hidden;
+  position: relative;
+  width: 33%;
+  height: 33%;
+  bottom: 7px;
   
-  border: 1px solid gray;
 }
 
 .img-wrapper img {
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  -ms-transition: all .2s ease;
-  -o-transition: all .2s ease;
   transition: all 0.5s ease;
   
   vertical-align: middle;
 }
 
 .img-wrapper img:hover {
-  -webkit-transform:scale(1.5); /* Safari and Chrome */
-  -moz-transform:scale(1.5); /* Firefox */
-  -ms-transform:scale(1.5); /* IE 9 */
-  -o-transform:scale(1.5); /* Opera */
-  transform:scale(1.5);
+  transform:scale(1.05);
 }
 
